Monitor test works. Added some launchers.